[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = {version = "1.0.155", features = ['derive']}
derive_more = "0.99.17"
actix-cors = "0.6.4"
actix-files = "0.6.2"